[GTK] Remote Web Inspector sometimes won't serve any content https://bugs.webkit.org/show_bug.cgi?id=116225

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2013-05-23
Reviewed by Gustavo Noronha Silva.

Added an option to use environment variable to set up path to
inspector server files. Implementation is similar to InspectorClientGtk
implementation.

* UIProcess/InspectorServer/WebInspectorServer.h:
(WebInspectorServer):
* UIProcess/InspectorServer/gtk/WebInspectorServerGtk.cpp:
(WebKit::WebInspectorServer::platformResourceForPath):
(WebKit::WebInspectorServer::inspectorServerFilesPath):
(WebKit):

Canonical link: https://commits.webkit.org/134968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150582 268f45cc-cd09-0410-ab3c-d52691b4dbfc